k8s/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "aprsme-dev"
  labels:
    name: "aprsme-dev"
