k8s/aprs-slurp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: aprs-slurp
    app: aprs-slurp
  name: aprs-slurp
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: aprs-slurp
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-tier: "true"
        io.kompose.service: aprs-slurp
        app: aprs-slurp
    spec:
      containers:
      - env:
        - name: APRS_SERVER
          value: g.vntx.net:10152
        - name: APRS_USERNAME
          value: APRSME-99
        - name: RABBITMQ_HOST
          value: rabbitmq
        - name: RABBITMQ_PASSWORD
          value: bitnami
        - name: RABBITMQ_PORT
          value: "5672"
        - name: RABBITMQ_USERNAME
          value: user
        - name: RABBITMQ_VHOST
          value: aprs
        image: aprsme/aprs_slurp:latest
        name: aprs-slurp
        resources: {}
      restartPolicy: Always
status: {}
