k8s/certbot-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: certbot
  name: certbot
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: certbot
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - trap exit TERM; while :; do certbot renew; sleep 12h & wait ${!}; done;
        image: certbot/certbot
        name: certbot
        resources: {}
        volumeMounts:
        - mountPath: /etc/letsencrypt
          name: certbot-claim0
        - mountPath: /var/www/certbot
          name: certbot-claim1
      restartPolicy: Always
      volumes:
      - name: certbot-claim0
        persistentVolumeClaim:
          claimName: certbot-claim0
      - name: certbot-claim1
        persistentVolumeClaim:
          claimName: certbot-claim1
status: {}
