k8s/geoipupdate-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: geoipupdate
  name: geoipupdate
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-tier: "true"
        io.kompose.service: geoipupdate
    spec:
      containers:
      - env:
        - name: ACCOUNT_ID
          value: "165665"
        - name: GEOIP_DB_DIR
          value: /opt/geoip
        - name: LICENSE_KEY
          value: ZTErFxgJ2JKy3ZvJ
        image: tkrs/maxmind-geoipupdate:latest
        name: geoipupdate
        resources: {}
        volumeMounts:
        - mountPath: /opt/geoip
          name: geoipupdate-claim0
      restartPolicy: Always
      volumes:
      - name: geoipupdate-claim0
        persistentVolumeClaim:
          claimName: geoipupdate-claim0
status: {}
