k8s/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
    app: nginx
  name: nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-tier: "true"
        io.kompose.service: nginx
        app: nginx
    spec:
      containers:
      - image: nginx:1.17.7-alpine
        name: nginx
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-claim0
        - mountPath: /etc/letsencrypt
          name: nginx-claim1
        - mountPath: /var/www/certbot
          name: nginx-claim2
      restartPolicy: Always
      volumes:
      - name: nginx-claim0
        persistentVolumeClaim:
          claimName: nginx-claim0
      - name: nginx-claim1
        persistentVolumeClaim:
          claimName: nginx-claim1
      - name: nginx-claim2
        persistentVolumeClaim:
          claimName: nginx-claim2
status: {}
