k8s/rabbitmq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
    app: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/app-tier: "true"
        io.kompose.service: rabbitmq
        app: rabbitmq
    spec:
      containers:
      - env:
        - name: RABBITMQ_VHOST
          value: aprs
        image: bitnami/rabbitmq:latest
        name: rabbitmq
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
status: {}
