k8s/watchtower-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: watchtower
  name: watchtower
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: watchtower
    spec:
      containers:
      - args:
        - --interval
        - "59"
        - --cleanup
        - "true"
        - aprsme-app
        image: v2tec/watchtower
        name: watchtower
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: watchtower-claim0
      restartPolicy: Always
      volumes:
      - name: watchtower-claim0
        persistentVolumeClaim:
          claimName: watchtower-claim0
status: {}
